--- a/Automotive/Views/FavTableViewCell.xib
+++ b/Automotive/Views/FavTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2S1-XJ-K4E">
+                    <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2S1-XJ-K4E">
                         <rect key="frame" x="8" y="26" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="nUH-2V-Vi0"/>
